<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?backgroundActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CalculatorActivity">

    <TextView
        android:id="@+id/edUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:hint="@string/zero"
        android:maxHeight="50sp"
        android:paddingEnd="5dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/vLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/tvResult"
        style="?textViewTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:maxHeight="70dp"
        android:paddingEnd="5dp"
        android:textSize="60sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/vLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="15dp"
        android:background="#000000" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:paddingBottom="10dp"
        android:useDefaultMargins="true">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btClean"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/keyC"
            app:rippleColor="@color/purple_200" />


        <Button
            android:id="@+id/btDelete"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyDelete" />

        <Button
            android:id="@+id/btDegree"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyDegree" />

        <Button
            android:id="@+id/btPlusMinus"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyPlusMinus" />

        <Button
            android:id="@+id/btPercent"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyPercent" />

        <Button
            android:id="@+id/btPi"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyPi" />


        <Button
            android:id="@+id/btRoot"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyRoot" />

        <Button
            android:id="@+id/btDivide"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyDivide" />

        <Button
            android:id="@+id/btKey1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key1" />

        <Button
            android:id="@+id/btKey2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key2" />

        <Button
            android:id="@+id/btKey3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key3" />

        <Button
            android:id="@+id/btMultiply"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyMultiply" />

        <Button
            android:id="@+id/btKey4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key4" />

        <Button
            android:id="@+id/btKey5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key5" />

        <Button
            android:id="@+id/btKey6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key6" />


        <Button
            android:id="@+id/btMinus"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyMinus" />

        <Button
            android:id="@+id/btKey7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key7" />

        <Button
            android:id="@+id/btKey8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key8" />

        <Button
            android:id="@+id/btKey9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key9" />

        <Button
            android:id="@+id/btPlus"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyPlus" />

        <Button
            android:id="@+id/btKey0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key0" />

        <Button
            android:id="@+id/btDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/keyDot" />

        <Button
            android:id="@+id/btEquals"
            style="?calcActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/keyEquals" />

    </GridLayout>

    <View
        android:id="@+id/vLine3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="right"
        android:minHeight="60dp">

        <Button
            android:id="@+id/btSettings"
            android:layout_width="42dp"
            android:layout_height="39dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/icon_settings"
            android:backgroundTintMode="src_atop"
            android:minWidth="105dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btDarkTheme"
            android:layout_width="43dp"
            android:layout_height="38dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/icon_dark"
            android:backgroundTintMode="src_atop"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btWhiteTheme"
            android:layout_width="42dp"
            android:layout_height="39dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/icon_white"
            android:backgroundTintMode="src_atop"
            android:minWidth="105dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

